# libtexprintf

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  boxes.c  boxes.h  configure.ac  drawbox.c  drawbox.h  error.c  lexer.c  lexer.h  main.c  mapunicode.h  parsedef.h  parser.c  runtest.sh  stringutils.c  stringutils.h  testascii.sh  testeqs.sh  testerrors.sh  testfont.sh  testfonts.sh  testsprintf.sh  testsuite.sh  testtexsymbols.sh  texprintf.3  texprintfsymbols  utfstringinfo.1  utftex.1
.github/workflows/: CI.yml
src/: Makefile.am  drawbox.c  drawchars.h  error.c  error.h  gen_errorflags.sh  gentexprintfsymbols.sh  lexer.c  lexer.h  main.c  parsedef.h  parser.c  parser.h  stringutils.c  stringutils.h  testfonts.c  testfonts.h  texprintf.c  texprintf.h  texprintfsymbols  unicodeblocks.h  utf2unicode.c  utfstringinfo.1  utftex.1
test/: MakeTest.sh  README  eq1-A.ref  eq1.new  eq1.ref  eq1.tex  eq10.ref  eq10.tex  eq11-A.ref  eq11.ref  eq11.tex  eq12-A.ref  eq12.ref  eq12.tex  eq13-A.ref  eq13.ref  eq13.tex  eq14.ref  eq14.tex  eq15-A.ref  eq15.ref  eq15.tex  eq16-A.ref  eq16.ref  eq16.tex  eq17-A.ref  eq17.ref  eq17.tex  eq18-A.ref  eq18.ref  eq18.tex  eq19.ref  eq19.tex  eq2-A.ref  eq2.ref  eq2.tex  eq20-A.ref  eq20.ref  eq20.tex  eq21-A.ref  (+45 more)
