SUBDIRS = src
TESTS=runtest.sh testfont.sh testascii.sh
EXTRA_DIST = runtest.sh testfont.sh test/eq1.tex test/eq2.tex test/eq3.tex test/eq4.tex test/eq5.tex \
			 test/eq6.tex test/eq7.tex test/eq8.tex test/eq9.tex test/eq10.tex test/eq11.tex test/eq12.tex \
			 test/eq13.tex test/eq14.tex test/eq15.tex test/eq16.tex test/eq17.tex test/eq18.tex test/font.tex \
             test/eq1.ref test/eq2.ref test/eq3.ref test/eq4.ref test/eq5.ref test/eq6.ref test/eq7.ref \
             test/eq8.ref test/eq9.ref test/eq10.ref test/eq11.ref test/eq12.ref test/eq13.ref test/eq14.ref \
             test/eq15.ref test/eq16.ref test/eq17.ref test/eq18.ref test/mathjax_examples.ref test/font.ref \
             test/fontmathbb.ref test/fontmathbf.ref test/fontmathbfit.ref test/fontmathcal.ref \
             test/fontmathfrak.ref test/fontmathnormal.ref test/fontmathscr.ref test/fontmathsf.ref \
             test/fontmathsfbf.ref test/fontmathsfbfit.ref test/fontmathsfit.ref test/fontmathtt.ref \
             test/fonttext.ref test/README
